# PixelCraft

./: .gitignore  README-zh.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: BUILD.md
scripts/: build-test.ps1  build-test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: export_jpg.rs  export_png.rs  generate_pixel_art.rs  load_image.rs  load_project.rs  logger.rs  mod.rs  read_image_base64.rs  save_dropped_file.rs  save_project.rs  test_command.rs  tray.rs  window_state.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/image_core/: decoder.rs  dithering.rs  exporter.rs  grid_builder.rs  mod.rs  quantizer.rs  resizer.rs
src-tauri/src/models/: image_meta.rs  mod.rs  pixel_document.rs  project_file.rs  settings.rs
src/app/: App.css  App.tsx
src/components/about/: AboutDialog.css  AboutDialog.tsx
src/components/common/: LoadingSpinner.css  LoadingSpinner.tsx  Toast.css  Toast.tsx  ToastContainer.css  ToastContainer.tsx
src/components/editor/: GridLayer.tsx  (+8 more)
src/hooks/: useDebounce.ts  useFileDrop.ts  useKeyboardShortcuts.ts  usePointerDraw.ts  useSystemTray.ts  useThrottle.ts  useWindowState.ts
src/locales/: en.ts  index.ts  zh.ts
src/store/: useAppStore.ts  useEditorStore.ts  useHistoryStore.ts  useLanguageStore.ts  useProjectStore.ts  useShortcutStore.ts  useThemeStore.ts  useToastStore.ts
src/styles/: globals.css
src/types/: index.ts  pixel.ts  project.ts
src/utils/: floodFill.ts
(+38 files in other folders)
