[package]
name = "pixelcraft"
version = "1.0.0"
description = "A desktop pixel art converter and editor"
authors = ["PixelCraft Team"]
license = "MIT"
repository = "https://github.com/pixelcraft/pixelcraft"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-shell = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
color_quant = "1.1"
base64 = "0.22"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
